@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Support process-1.6.3.0
     #290, add withTempFileInside and withTempDirInside
     #549, Semigroup-Monoid proposal support
     Hadrian-462, fail gracefully if on-disk formats change
